--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Sen', sans-serif;
+  color: #594F4F;
+ 
+}
+.navbar{
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.navbar h1{
+  color: #594F4F;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar .links{
+  margin-left: auto;
+}
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover{
+  color: #5BA698;
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+.content{
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+}
+
+.preview{
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 1px solid #fafafa;
+}
+.preview:hover{
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+.preview h3{
+  font-size: 20px;
+  color:#594F4F;
+  margin-bottom: 8px;
+}
+.logo{
+  display: block;
+}
+img{
+  padding: 0;
+  margin: auto;
+  height: 100px;
+  width: 100px;
 }
